# Bloodshot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
Source/Editor/: CMakeLists.txt  EntryPoint.cpp
Source/Editor/Core/Private/: Editor.cpp  Editor.h  EntryPoint.cpp
Source/Editor/EditorUI/: CMakeLists.txt
Source/Editor/EditorUI/Public/: ImGuiHeader.h
Source/Editor/GUI/Public/: ImGuiHeader.h
Source/Editor/Private/: EnetTemplate.h  EntryPoint.cpp  OpenGLTemplate.h
Source/Editor/Public/: EntryPoint.cpp
Source/Engine/: Bloodshot.h  CMakeLists.txt
Source/Engine/Allocators/Private/: TempLinearAllocator.cpp
Source/Engine/Allocators/Public/: Allocator.h  AllocatorTraits.h  BlockAllocator.h  TempBlockAllocator.h  TempLinearAllocator.h
Source/Engine/Assets/Private/: AssetLoader.cpp  ResourceManager.cpp
Source/Engine/Assets/Public/: AssetLoader.h  Assimp.h  ResourceManager.h
Source/Engine/Benchmark/: Profiler.cpp  Profiler.h  Timer.cpp  Timer.h
Source/Engine/Core/: Assert.h  Core.cpp  Core.h  EngineFramework.cpp  EngineFramework.h  EngineState.cpp  EngineState.h  EngineTime.cpp  EngineTime.h  FileIO.cpp  FileIO.h  LocalTime.cpp  LocalTime.h  Locale.cpp  Locale.h  ResourceManager.cpp  ResourceManager.h
Source/Engine/Core/Private/: Application.cpp  EngineState.cpp  EngineTime.cpp  FileIO.cpp  LocalTime.cpp  Malloc.cpp  New.cpp  ResourceManager.cpp  Timer.cpp
Source/Engine/Core/Private/Allocators/: CircularLinearAllocator.cpp  LinearAllocator.cpp
Source/Engine/Core/Public/: Application.h  AssertionMacros.h  Casts.h  Core.h  EngineState.h  EngineTime.h  EnumClassFlags.h  FileIO.h  LocalTime.h  Malloc.h  Platform.h  ResourceManager.h  Timer.h
Source/Engine/Cursor/Public/: Cursor.h
Source/Engine/Debug/: Logger.cpp  Logger.h
Source/Engine/ECS/: Component.h  ComponentManager.cpp  ComponentManager.h  ComponentStorage.cpp  ComponentStorage.h  ECS.cpp  ECS.h  Entity.h  EntityManager.cpp  EntityManager.h  EntityStorage.cpp  EntityStorage.h  IComponent.h  IEntity.h  ISystem.h  System.h  SystemManager.cpp  SystemManager.h  SystemStorage.cpp  SystemStorage.h
Source/Engine/ECS/Private/: ComponentManager.cpp  ComponentStorage.cpp  ECS.cpp  Entity.cpp  EntityManager.cpp  EntityStorage.cpp  SystemManager.cpp  SystemStorage.cpp
Source/Engine/ECS/Public/: Component.h  ComponentManager.h  ComponentStorage.h  ECS.h  Entity.h  EntityManager.h  EntityStorage.h  IComponent.h  IEntity.h  ISystem.h  System.h  SystemManager.h  SystemStorage.h
Source/Engine/Framework/Private/: CameraComponent.cpp  MeshComponent.cpp  NetworkingSystem.cpp  RenderingSystem.cpp
Source/Engine/Framework/Public/: CameraComponent.h  MeshComponent.h  NetworkingPackets.h  NetworkingSystem.h  RenderingSystem.h  TransformComponent.h
Source/Engine/GameFramework/: Components.h  World.cpp  World.h
Source/Engine/Input/Private/: Input.cpp
Source/Engine/Input/Public/: Input.h
Source/Engine/Math/: Math.h
Source/Engine/Math/Public/: MathLibrary.h
Source/Engine/Memory/: FixedAllocator.h  LinearAllocator.cpp  LinearAllocator.h  MemoryManager.cpp  MemoryManager.h
Source/Engine/Networking/Private/: Networking.cpp
Source/Engine/Networking/Public/: Networking.h
Source/Engine/Platform/: Platform.h
Source/Engine/Platform/OpenGL/: OpenGLHeader.cpp  OpenGLHeader.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLWindow.cpp  OpenGLWindow.h
Source/Engine/Project/Private/: Project.cpp
Source/Engine/Project/Public/: Project.h
Source/Engine/Rendering/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Window.cpp  Window.h
Source/Engine/Rendering/Private/: BufferElement.cpp  Mesh.cpp  PerspectiveCamera.cpp  Renderer.cpp  Shader.cpp  ShaderDataType.cpp  StbImage.cpp  Texture.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  Window.cpp
Source/Engine/Rendering/Public/: BufferElement.h  Camera.h  FrameBuffer.h  IndexBuffer.h  Material.h  Mesh.h  PerspectiveCamera.h  Renderer.h  Shader.h  ShaderDataType.h  StbImage.h  Texture.h  UniformBuffer.h  Vertex.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Window.h
Source/Engine/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Source/Engine/Scene/Private/: ComponentManager.cpp  Entity.cpp  EntityManager.cpp  Scene.cpp  SceneManager.cpp  SystemManager.cpp
Source/Engine/Scene/Public/: Component.h  ComponentManager.h  Entity.h  EntityManager.h  Scene.h  SceneManager.h  System.h  SystemManager.h
Source/Engine/Test/: TestFramework.h
Source/Engine/TestFramework/: TestFramework.h
Source/Engine/TestFramework/Public/: TestFramework.h
Source/Engine/Utility/: INonCopyable.h  ISingleton.h  TypeInfo.h  Utility.h
Source/Programs/HeaderTool/: CMakeLists.txt
Source/Programs/Launcher/: CMakeLists.txt
Source/Runtime/Core/: CMakeLists.txt
Source/Runtime/Core/Public/: Core.h  CoreMisc.h
Source/Runtime/Core/Tests/: ObjectCoreTest.cpp
Source/Runtime/GameFramework/: CMakeLists.txt
Source/Runtime/Launch/: CMakeLists.txt
Source/Runtime/Launch/Private/: EngineContext.cpp  EngineLoop.cpp  EntryPoint.cpp
Source/Runtime/Launch/Public/: EngineContext.h  EngineLoop.h
Source/Runtime/Networking/: CMakeLists.txt
Source/Runtime/Networking/Private/: Networking.cpp
Source/Runtime/Networking/Public/: Networking.h
Source/Runtime/Rendering/: CMakeLists.txt
Source/Runtime/Rendering/Private/: Camera.cpp  FrameBuffer.cpp  Renderer.cpp  ShaderDataType.cpp  VertexBufferLayout.cpp  Window.cpp
Source/Runtime/Rendering/Public/: BufferElement.h  Camera.h  FrameBuffer.h  IndexBuffer.h  Renderer.h  Texture.h  UniformBuffer.h  Vertex.h  VertexArray.h  VertexBufferLayout.h  Window.h
Source/Shared/: CMakeLists.txt
Source/Shared/CmdParser/Private/: CmdParser.cpp
Source/Shared/CmdParser/Public/: CmdParser.h
Source/Shared/Project/Private/: Project.cpp
Source/Shared/Project/Public/: Project.h
Source/Shared/String/Private/: ParseTokens.cpp
Source/Shared/String/Public/: ParseTokens.h
Source/Tests/: CMakeLists.txt
Source/Tests/Private/: AllocatorsTest.cpp  ECSTest.cpp  Framework.h  Test1.cpp
(+305 files in other folders)
