project(Editor)

file(GLOB_RECURSE EDITOR_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE EDITOR_HEADERS ${PROJECT_SOURCE_DIR}/*.h)

add_executable(${PROJECT_NAME} ${EDITOR_SOURCES} ${EDITOR_HEADERS})
executable_include_content(${PROJECT_NAME})

target_link_libraries(${PROJECT_NAME} PRIVATE Engine)
target_link_libraries(${PROJECT_NAME} PRIVATE imgui)

set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER ${PROJECT_FOLDER_NAME})
set_target_properties(${PROJECT_NAME} PROPERTIES 
	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}/Debug 
	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}/Release 
	RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${OUTPUT_DIR}/RelWithDebInfo 
	RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${OUTPUT_DIR}/MinSizeRel)

source_group(${PROJECT_NAME})
