project(Shared)

file(GLOB_RECURSE SHARED_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE SHARED_HEADERS ${PROJECT_SOURCE_DIR}/*.h)

add_library(${PROJECT_NAME} SHARED ${SHARED_SOURCES} ${SHARED_HEADERS})

get_paths_by_pattern(SHARED_PUBLIC_CONTENT ${PROJECT_SOURCE_DIR} Public Private)
get_paths_by_pattern(SHARED_PRIVATE_CONTENT ${PROJECT_SOURCE_DIR} Private Public)

target_include_directories(${PROJECT_NAME} PUBLIC ${SHARED_PUBLIC_CONTENT})
target_include_directories(${PROJECT_NAME} PRIVATE ${SHARED_PRIVATE_CONTENT})

set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER ${PROJECT_FOLDER_NAME})
set_target_properties(${PROJECT_NAME} PROPERTIES 
	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}/Debug 
	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}/Release 
	RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${OUTPUT_DIR}/RelWithDebInfo 
	RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${OUTPUT_DIR}/MinSizeRel)

source_group(${PROJECT_NAME})
