project(Shared)

file(GLOB_RECURSE SHARED_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE SHARED_HEADERS ${PROJECT_SOURCE_DIR}/*.h)

add_library(${PROJECT_NAME} SHARED ${SHARED_SOURCES} ${SHARED_HEADERS})
library_include_content(${PROJECT_NAME} ${PROJECT_SOURCE_DIR})

set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER ${BLOODSHOT_PROJECT_FOLDER_NAME})
target_output_properties(${PROJECT_NAME} ${PROJECT_NAME} ${BLOODSHOT_BINARIES_DIR})

source_group(${PROJECT_NAME})
