project(Tests)

file(GLOB_RECURSE TESTS_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE TESTS_HEADERS ${PROJECT_SOURCE_DIR}/*.h)

foreach(_TEST_PATH ${TESTS_SOURCES})
	get_filename_component(_TEST_EXEC_NAME_WE ${_TEST_PATH} NAME_WE)
	add_executable(${_TEST_EXEC_NAME_WE} ${_TEST_PATH} ${TESTS_HEADERS})
	target_link_libraries(${_TEST_EXEC_NAME_WE} PRIVATE Engine)

	set_target_properties(${_TEST_EXEC_NAME_WE} PROPERTIES FOLDER ${PROJECT_FOLDER_NAME})
	set_target_properties(${_TEST_EXEC_NAME_WE} PROPERTIES 
		RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIR}/Debug 
		RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIR}/Release 
		RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${OUTPUT_DIR}/RelWithDebInfo 
		RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${OUTPUT_DIR}/MinSizeRel)

	add_test(NAME ${_TEST_EXEC_NAME_WE} COMMAND ${_TEST_EXEC_NAME_WE})
	add_dependencies(${_TEST_EXEC_NAME_WE} Engine)
endforeach()
